# window

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  window-c9c6d36cd61c48e7.js  window-c9c6d36cd61c48e7_bg.wasm
.github/workflows/: deploy.yml
src/: app.rs  main.rs
