[package]
name = "window"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "glow",
    "wayland",
    "default_fonts",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
